Editor updates: * Object name, position, scale, and model all modifiable through the * editor. * New menu to add objects to the scene. * Debug menu with renderdoc commands * TextBox and NumericTextBox widgets working * New AssetSelector widget, currently hardcoded to only select models.
Also removed the exes from the bin folder and added them to git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 /bin/data/
 /bin/shaders/
 /src/ObjSceneConverter/output
+bin/AssetBinService.exe
+bin/ObjSceneConverter.exe
+bin/RenderLabEditor.exe
+bin/TextSDF.exe
