--- a/src/RenderLabEditor/RenderLabEditor.vcxproj
+++ b/src/RenderLabEditor/RenderLabEditor.vcxproj
@@ -182,13 +182,17 @@
     <ClCompile Include="PropertyTables.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="ViewModels\PostProcessEffectsViewModel.cpp" />
+    <ClCompile Include="ViewModels\SceneViewModel.cpp" />
     <ClCompile Include="ViewModels\SkyViewModel.cpp" />
     <ClCompile Include="ViewModels\IViewModel.cpp" />
+    <ClCompile Include="ViewModels\WorldObjectViewModel.cpp" />
+    <ClCompile Include="Widgets\AssetSelector.cpp" />
     <ClCompile Include="Widgets\Button.cpp" />
     <ClCompile Include="Widgets\CheckBox.cpp" />
     <ClCompile Include="Widgets\Label.cpp" />
     <ClCompile Include="Widgets\ListView.cpp" />
     <ClCompile Include="Widgets\Menu.cpp" />
+    <ClCompile Include="Widgets\NumericTextBox.cpp" />
     <ClCompile Include="Widgets\Panel.cpp" />
     <ClCompile Include="Widgets\PropertyPanel.cpp" />
     <ClCompile Include="Widgets\Slider.cpp" />
@@ -204,12 +208,16 @@
     <ClInclude Include="SceneTree.h" />
     <ClInclude Include="ViewModels\IViewModel.h" />
     <ClInclude Include="ViewModels\PostProcessEffectsViewModel.h" />
+    <ClInclude Include="ViewModels\SceneViewModel.h" />
     <ClInclude Include="ViewModels\SkyViewModel.h" />
+    <ClInclude Include="ViewModels\WorldObjectViewModel.h" />
+    <ClInclude Include="Widgets\AssetSelector.h" />
     <ClInclude Include="Widgets\Button.h" />
     <ClInclude Include="Widgets\CheckBox.h" />
     <ClInclude Include="Widgets\Label.h" />
     <ClInclude Include="Widgets\ListView.h" />
     <ClInclude Include="Widgets\Menu.h" />
+    <ClInclude Include="Widgets\NumericTextBox.h" />
     <ClInclude Include="Widgets\Panel.h" />
     <ClInclude Include="Widgets\PropertyPanel.h" />
     <ClInclude Include="Widgets\Slider.h" />
