--- a/src/RenderLabEditor/RenderLabEditor.vcxproj.filters
+++ b/src/RenderLabEditor/RenderLabEditor.vcxproj.filters
@@ -46,6 +46,18 @@
     <ClCompile Include="ViewModels\IViewModel.cpp">
       <Filter>ViewModels</Filter>
     </ClCompile>
+    <ClCompile Include="ViewModels\WorldObjectViewModel.cpp">
+      <Filter>ViewModels</Filter>
+    </ClCompile>
+    <ClCompile Include="Widgets\NumericTextBox.cpp">
+      <Filter>Widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="ViewModels\SceneViewModel.cpp">
+      <Filter>ViewModels</Filter>
+    </ClCompile>
+    <ClCompile Include="Widgets\AssetSelector.cpp">
+      <Filter>Widgets</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWindow.h" />
@@ -93,6 +105,18 @@
     </ClInclude>
     <ClInclude Include="ViewModels\IViewModel.h">
       <Filter>ViewModels</Filter>
+    </ClInclude>
+    <ClInclude Include="ViewModels\WorldObjectViewModel.h">
+      <Filter>ViewModels</Filter>
+    </ClInclude>
+    <ClInclude Include="Widgets\NumericTextBox.h">
+      <Filter>Widgets</Filter>
+    </ClInclude>
+    <ClInclude Include="ViewModels\SceneViewModel.h">
+      <Filter>ViewModels</Filter>
+    </ClInclude>
+    <ClInclude Include="Widgets\AssetSelector.h">
+      <Filter>Widgets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
