RdrDrawOp/ComputeOps are no longer persistent.  Drawing has now changed to a cull+queue system instead of prepare+cull+queue.  This saves some update time when an object is culled as its draw resources do not need to be updated.  More importantly, it allows for draw ops to setup using the active camera which is necessary for terrain.

--- a/src/RenderLab/RenderLab.vcxproj
+++ b/src/RenderLab/RenderLab.vcxproj
@@ -189,19 +189,17 @@
     <ClCompile Include="render\Camera.cpp" />
     <ClCompile Include="render\Font.cpp" />
     <ClCompile Include="render\ModelInstance.cpp" />
-    <ClCompile Include="render\RdrComputeOp.cpp" />
     <ClCompile Include="render\RdrDeviceTypes.cpp" />
     <ClCompile Include="render\Light.cpp" />
     <ClCompile Include="render\ModelData.cpp" />
     <ClCompile Include="render\RdrFrameState.cpp" />
     <ClCompile Include="render\RdrContextD3D11.cpp" />
     <ClCompile Include="render\RdrContextD3D11_Shaders.cpp" />
-    <ClCompile Include="render\RdrDrawOp.cpp" />
     <ClCompile Include="render\RdrMaterial.cpp" />
     <ClCompile Include="render\RdrInstancedObjectDataBuffer.cpp" />
     <ClCompile Include="render\RdrPostProcessEffects.cpp" />
     <ClCompile Include="render\RdrProfiler.cpp" />
-    <ClCompile Include="render\RdrScratchMem.cpp" />
+    <ClCompile Include="render\RdrFrameMem.cpp" />
     <ClCompile Include="render\Renderer.cpp" />
     <ClCompile Include="render\RdrShaderSystem.cpp" />
     <ClCompile Include="render\RdrPostProcess.cpp" />
@@ -256,7 +254,7 @@
     <ClInclude Include="render\RdrShaderConstants.h" />
     <ClInclude Include="render\RdrShaderSystem.h" />
     <ClInclude Include="render\RdrResourceSystem.h" />
-    <ClInclude Include="render\RdrScratchMem.h" />
+    <ClInclude Include="render\RdrFrameMem.h" />
     <ClInclude Include="render\RdrShaderTypes.h" />
     <ClInclude Include="render\Renderer.h" />
     <ClInclude Include="render\RdrShaders.h" />
