* Basic tessellated terrain working.  Currently does not cast shadows or cull/LOD to the camera.  Also doesn't have materials yet. * TIFF texture and heightmap import support added. * Increased middle grey value for default sky to 0.6 for outdoor scenes. * Cleaned up AssetLib forward declares by moving them into a common header.

--- a/src/AssetLib/AssetLib.vcxproj
+++ b/src/AssetLib/AssetLib.vcxproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetDef.h" />
+    <ClInclude Include="AssetLibForwardDecl.h" />
     <ClInclude Include="AssetLibrary.h" />
     <ClInclude Include="BinFile.h" />
     <ClInclude Include="MaterialAsset.h" />
