Added volumetric fog.  There are a few unfinished bits that would improve quality and accuracy, but it's working well enough for now.  And of coursee, there were lots of other changes along the way:
Lighting Fixes:
* Added energy conservation "divide by PI" operation to diffuse lighting. The operation cannot be built into the light intensities anymore because of atmospherics.  Going to be moving to PBR soon anyway.
* Fixed spec highlights not accounting for the light color.
* Fixed directional light transmittance sampling from a much higher altitude than it should've been which was making surfaces too bright compared to the sky.

Misc:
* Replaced most of the various loose array/size pairs with a new Array template class that internally manages size.  There's a bit of overhead with this since the size is updated everytime a value is assigned, but it avoids the extra complexity and fragility of updating the sizes manually.
* Fixed some constant buffer register bindings using the wrong syntax
* Moved global pixel shader resources into shared file.
* Fixed the first down-sampled layer of bloom getting dropped.
* Renamed the SizedArray to the far more appropriate FixedVector.

--- a/src/MathLib/MathLib.vcxproj
+++ b/src/MathLib/MathLib.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="Matrix44.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="UVec2.h" />
+    <ClInclude Include="UVec3.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="Vec3.h" />
     <ClInclude Include="Vec3Math.h" />
