--- a/src/MathLib/MathLib.vcxproj.filters
+++ b/src/MathLib/MathLib.vcxproj.filters
@@ -11,6 +11,7 @@
     <ClInclude Include="Vec3Math.h" />
     <ClInclude Include="Vec4.h" />
     <ClInclude Include="UVec2.h" />
+    <ClInclude Include="UVec3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MathConstants.cpp" />
