--- a/src/RenderLab/RenderLab.vcxproj.filters
+++ b/src/RenderLab/RenderLab.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <FxCompile Include="..\..\data\shaders\c_bloom_shrink.hlsl">
-      <Filter>shaders</Filter>
-    </FxCompile>
     <FxCompile Include="..\..\data\shaders\c_blur.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
@@ -113,6 +110,9 @@
       <Filter>shaders</Filter>
     </FxCompile>
     <FxCompile Include="..\..\data\shaders\c_volumetric_fog_accum.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\data\shaders\c_shrink.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
   </ItemGroup>
