Specular probe checkpoint: * Specular probes mostly implemented.  Currently only the global probe is used, though.  Still need to generate mip-maps, apply pre-filtering, and use local probes with parallax correction. * Offloaded light culling management onto the light list object instead of the renderer. * Clustered lighting now has an adjustable tile size.  Each tile is still a square, but the largest dimension of the viewport is sized ~16 tiles wide with the tile size being a multiple of 8.
--Misc changes--
* Added material swaps for scene objects.
* Added StringCache utility to simplify string management.
* Moved some global debug state values into the user config file so they can be changed without recompiling.

--- a/src/RenderLab/RenderLab.vcxproj.filters
+++ b/src/RenderLab/RenderLab.vcxproj.filters
@@ -205,6 +205,9 @@
     <ClCompile Include="render\RdrFrameMem.cpp">
       <Filter>render</Filter>
     </ClCompile>
+    <ClCompile Include="render\RdrOffscreenTasks.cpp">
+      <Filter>render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Types.h" />
@@ -354,6 +357,9 @@
       <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="render\RdrTessellationMaterial.h">
+      <Filter>render</Filter>
+    </ClInclude>
+    <ClInclude Include="render\RdrOffscreenTasks.h">
       <Filter>render</Filter>
     </ClInclude>
   </ItemGroup>
