--- a/src/RenderLab/RenderLab.vcxproj
+++ b/src/RenderLab/RenderLab.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="render\RdrContextD3D11_Shaders.cpp" />
     <ClCompile Include="render\RdrMaterial.cpp" />
     <ClCompile Include="render\RdrInstancedObjectDataBuffer.cpp" />
+    <ClCompile Include="render\RdrOffscreenTasks.cpp" />
     <ClCompile Include="render\RdrPostProcessEffects.cpp" />
     <ClCompile Include="render\RdrProfiler.cpp" />
     <ClCompile Include="render\RdrFrameMem.cpp" />
@@ -247,6 +248,7 @@
     <ClInclude Include="render\RdrGeometry.h" />
     <ClInclude Include="render\RdrMaterial.h" />
     <ClInclude Include="render\RdrInstancedObjectDataBuffer.h" />
+    <ClInclude Include="render\RdrOffscreenTasks.h" />
     <ClInclude Include="render\RdrPostProcess.h" />
     <ClInclude Include="render\RdrPostProcessEffects.h" />
     <ClInclude Include="render\RdrProfiler.h" />
