--- a/src/UtilsLib/UtilsLib.vcxproj
+++ b/src/UtilsLib/UtilsLib.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="Hash.cpp" />
     <ClCompile Include="json\jsoncpp.cpp" />
     <ClCompile Include="Paths.cpp" />
+    <ClCompile Include="StringCache.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -40,9 +41,11 @@
     <ClInclude Include="json\json.h" />
     <ClInclude Include="Paths.h" />
     <ClInclude Include="FixedVector.h" />
+    <ClInclude Include="StringCache.h" />
     <ClInclude Include="ThreadMutex.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Util.h" />
+    <ClInclude Include="UtilsLibForwardDecl.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{78BE162A-48B3-44CF-B585-9F5A13AE1EB5}</ProjectGuid>
