--- a/src/UtilsLib/UtilsLib.vcxproj.filters
+++ b/src/UtilsLib/UtilsLib.vcxproj.filters
@@ -11,6 +11,7 @@
     <ClCompile Include="Error.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Hash.cpp" />
+    <ClCompile Include="StringCache.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileLoader.h" />
@@ -31,6 +32,8 @@
     <ClInclude Include="JsonUtils.h" />
     <ClInclude Include="FixedVector.h" />
     <ClInclude Include="Array.h" />
+    <ClInclude Include="StringCache.h" />
+    <ClInclude Include="UtilsLibForwardDecl.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
