--- a/src/RenderLab/RenderLab.vcxproj
+++ b/src/RenderLab/RenderLab.vcxproj
@@ -103,6 +103,7 @@
       <ForcedIncludeFiles>
       </ForcedIncludeFiles>
       <InlineFunctionExpansion>Disabled</InlineFunctionExpansion>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -120,6 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>Precompiled.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>.\;..\;..\..\3rdparty;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,6 +141,7 @@
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>.\;..\;..\..\3rdparty;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>Precompiled.h</PrecompiledHeaderFile>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -160,6 +163,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>.\;..\;..\..\3rdparty;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -171,13 +175,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="components\ModelInstance.cpp" />
+    <ClCompile Include="components\RigidBody.cpp" />
     <ClCompile Include="debug\Debug.cpp" />
     <ClCompile Include="debug\DebugConsole.cpp" />
     <ClCompile Include="debug\PostProcessDebugger.cpp" />
-    <ClCompile Include="FrameTimer.cpp" />
+    <ClCompile Include="Time.cpp" />
     <ClCompile Include="GlobalState.cpp" />
     <ClCompile Include="input\CameraInputContext.cpp" />
     <ClCompile Include="input\Input.cpp" />
+    <ClCompile Include="Physics.cpp" />
     <ClCompile Include="Precompiled.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -188,7 +195,6 @@
     <ClCompile Include="RenderDoc\RenderDoc.cpp" />
     <ClCompile Include="render\Camera.cpp" />
     <ClCompile Include="render\Font.cpp" />
-    <ClCompile Include="render\ModelInstance.cpp" />
     <ClCompile Include="render\RdrDeviceTypes.cpp" />
     <ClCompile Include="render\Light.cpp" />
     <ClCompile Include="render\ModelData.cpp" />
@@ -220,16 +226,20 @@
     <ClInclude Include="..\..\data\shaders\light_types.h" />
     <ClInclude Include="..\..\data\shaders\p_constants.h" />
     <ClInclude Include="..\Types.h" />
+    <ClInclude Include="components\ModelInstance.h" />
+    <ClInclude Include="components\RigidBody.h" />
     <ClInclude Include="debug\Debug.h" />
     <ClInclude Include="debug\DebugConsole.h" />
     <ClInclude Include="debug\PostProcessDebugger.h" />
-    <ClInclude Include="FrameTimer.h" />
+    <ClInclude Include="Time.h" />
     <ClInclude Include="FreeList.h" />
     <ClInclude Include="GlobalState.h" />
     <ClInclude Include="IDSet.h" />
     <ClInclude Include="input\CameraInputContext.h" />
     <ClInclude Include="input\Input.h" />
     <ClInclude Include="LinearAllocator.h" />
+    <ClInclude Include="Physics.h" />
+    <ClInclude Include="PhysicsTypes.h" />
     <ClInclude Include="Precompiled.h" />
     <ClInclude Include="RenderDoc\RenderDocUtil.h" />
     <ClInclude Include="RenderDoc\renderdoc_app.h" />
@@ -237,7 +247,6 @@
     <ClInclude Include="render\Font.h" />
     <ClInclude Include="render\Light.h" />
     <ClInclude Include="render\ModelData.h" />
-    <ClInclude Include="render\ModelInstance.h" />
     <ClInclude Include="render\RdrComputeOp.h" />
     <ClInclude Include="render\RdrContext.h" />
     <ClInclude Include="render\RdrContextD3D11.h" />
