--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 bin/AssetBinService.exe
 bin/ObjSceneConverter.exe
 bin/RenderLabEditor.exe
+bin/RenderLabStandalone.exe
 bin/TextSDF.exe
 bin/AssetImporter.exe
 user.config
