Lots of additions to the editor UI: * Widgets now have "drag data" which are used when the widget is clicked and dragged.  At the moment the data types are just placeable world object assets used for dragging objects into the render window.  These will be expanded in the future to drag assets to various widgets (such as model selection) and possibly for moving widgets around. * Models can now be dragged from the asset browser into the render window and have an object automatically created and placed in the world under the cursor. * Refactored Widget input event handling a bit.  There are now two versions: Handle* and On*.  Handle is the internal event processing done by the Widget base class which then calls the On* version which can be overriden by sub-classes. * Added mouse enter and leave input events for widgets. * Replaced "WantsKeyDownRepeat" check with WM_CHAR event handling to differentiate key states from text input and get correct characters without having to do manual key state checking for Shift and such.

--- a/src/RenderLabEditor/RenderLabEditor.vcxproj
+++ b/src/RenderLabEditor/RenderLabEditor.vcxproj
@@ -221,6 +221,7 @@
     <ClInclude Include="PropertyTables.h" />
     <ClInclude Include="RenderWindow.h" />
     <ClInclude Include="SceneTree.h" />
+    <ClInclude Include="WidgetDragData.h" />
     <ClInclude Include="ViewModels\IViewModel.h" />
     <ClInclude Include="ViewModels\PostProcessEffectsViewModel.h" />
     <ClInclude Include="ViewModels\SceneViewModel.h" />
@@ -240,6 +241,7 @@
     <ClInclude Include="Widgets\Slider.h" />
     <ClInclude Include="Widgets\TextBox.h" />
     <ClInclude Include="Widgets\Widget.h" />
+    <ClInclude Include="Widgets\WidgetDragData.h" />
     <ClInclude Include="WindowBase.h" />
     <ClInclude Include="WindowLayout.h" />
   </ItemGroup>
