* Added icons for various asset types in the asset browser * Added scrolling support to widgets. * Added a handful of widget state/style mutators (visible, border, scroll, input). * Fixed some mouse capture bugs. * Added mouse wheel input handling. * Fixed widget sizing issues when they had a border. * Image widgets can now use a shared icon library. * Labels now support text alignment. * Switched asset selector widget over to using drag-and-drop system from asset browser instead of a file dialog. * Added vsync setting to user config * Adjusted RenderWindow's interaction with the scene to always go through the SceneViewModel so that UI elements are updated correctly.

--- a/src/RenderLabEditor/RenderLabEditor.vcxproj.filters
+++ b/src/RenderLabEditor/RenderLabEditor.vcxproj.filters
@@ -64,6 +64,7 @@
     <ClCompile Include="Widgets\Image.cpp">
       <Filter>Widgets</Filter>
     </ClCompile>
+    <ClCompile Include="IconLibrary.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWindow.h" />
@@ -134,6 +135,7 @@
     <ClInclude Include="Widgets\WidgetDragData.h">
       <Filter>Widgets</Filter>
     </ClInclude>
+    <ClInclude Include="IconLibrary.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ViewModels">
