--- a/src/RenderLabEditor/RenderLabEditor.vcxproj
+++ b/src/RenderLabEditor/RenderLabEditor.vcxproj
@@ -180,6 +180,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="IconLibrary.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Precompiled.cpp">
@@ -216,6 +217,7 @@
     <ClCompile Include="WindowBase.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IconLibrary.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Precompiled.h" />
     <ClInclude Include="PropertyTables.h" />
